--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
   <script>
     // 🖼️ קישורים לתמונות (שנה כאן לפי הצורך)
-    const imgOuterSrc = "https://example.com/outer.png";
-    const imgInnerSrc = "https://example.com/inner.png";
-    const imgThicknessSrc = "https://example.com/thickness.png";
+	const imgOuterSrc = "outer.jpg";
+	const imgInnerSrc = "inner.jpg";
+	const imgThicknessSrc = "thickness.jpg";
 
     // טעינת התמונות לדף
     document.getElementById("imgOuter").src = imgOuterSrc;
